--- a/Nhom09_083_388_392_537_708/Nhom09_083_388_392_537_708/Nhom09_083_388_392_537_708.csproj
+++ b/Nhom09_083_388_392_537_708/Nhom09_083_388_392_537_708/Nhom09_083_388_392_537_708.csproj
@@ -52,11 +52,23 @@
     <Compile Include="DSDoanhNghiepTiemNang.Designer.cs">
       <DependentUpon>DSDoanhNghiepTiemNang.cs</DependentUpon>
     </Compile>
+    <Compile Include="NopHoSoUngTuyen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NopHoSoUngTuyen.Designer.cs">
+      <DependentUpon>NopHoSoUngTuyen.cs</DependentUpon>
+    </Compile>
     <Compile Include="THANHTOAN.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="THANHTOAN.Designer.cs">
       <DependentUpon>THANHTOAN.cs</DependentUpon>
+    </Compile>
+    <Compile Include="XemPhieuDangTuyen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="XemPhieuDangTuyen.Designer.cs">
+      <DependentUpon>XemPhieuDangTuyen.cs</DependentUpon>
     </Compile>
     <Compile Include="XULYHOSOUNGTUYEN.cs">
       <SubType>Form</SubType>
@@ -66,6 +78,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="NopHoSoUngTuyen.resx">
+      <DependentUpon>NopHoSoUngTuyen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="XemPhieuDangTuyen.resx">
+      <DependentUpon>XemPhieuDangTuyen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="XULYHOSOUNGTUYEN.resx">
       <DependentUpon>XULYHOSOUNGTUYEN.cs</DependentUpon>
     </EmbeddedResource>
