--- a/Nhom09_083_388_392_537_708/Nhom09_083_388_392_537_708/Nhom09_083_388_392_537_708.csproj
+++ b/Nhom09_083_388_392_537_708/Nhom09_083_388_392_537_708/Nhom09_083_388_392_537_708.csproj
@@ -129,6 +129,9 @@
     <EmbeddedResource Include="NopHoSoUngTuyen.resx">
       <DependentUpon>NopHoSoUngTuyen.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="THANHTOAN.resx">
+      <DependentUpon>THANHTOAN.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="XemPhieuDangTuyen.resx">
       <DependentUpon>XemPhieuDangTuyen.cs</DependentUpon>
     </EmbeddedResource>
