fix dangnhap 3layer

--- a/Nhom09_083_388_392_537_708/DAO/DAO.csproj
+++ b/Nhom09_083_388_392_537_708/DAO/DAO.csproj
@@ -41,9 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DangNhapDAO.cs" />
-    <Compile Include="DatabaseProvider.cs" />
+    <Compile Include="PhieuDangTuyenDAO.cs" />
+    <Compile Include="UserDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utility\Utility.csproj">
+      <Project>{00446729-fc5c-4cbd-bd53-9db072c8c56d}</Project>
+      <Name>Utility</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
