--- a/Nhom09_083_388_392_537_708/GUI/GUI.csproj
+++ b/Nhom09_083_388_392_537_708/GUI/GUI.csproj
@@ -139,6 +139,7 @@
     <Compile Include="frmXuLyHSUngTuyen.Designer.cs">
       <DependentUpon>frmXuLyHSUngTuyen.cs</DependentUpon>
     </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="ThemeColor.cs" />
@@ -208,7 +209,16 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\BUS\BUS.csproj">
+      <Project>{398f9e29-6422-4f44-8482-69e28a0922c2}</Project>
+      <Name>BUS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utility\Utility.csproj">
+      <Project>{00446729-fc5c-4cbd-bd53-9db072c8c56d}</Project>
+      <Name>Utility</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\btn_plus.jpg" />
     <Content Include="Resources\login.png" />
