them bangcapDAO, bangcapBUS

--- a/Nhom09_083_388_392_537_708/BUS/BUS.csproj
+++ b/Nhom09_083_388_392_537_708/BUS/BUS.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BangCapBUS.cs" />
     <Compile Include="DoanhNghiepBUS.cs" />
     <Compile Include="HoSoUngTuyenBUS.cs" />
     <Compile Include="PhieuDangTuyenBUS.cs" />
