--- a/Nhom09_083_388_392_537_708/DAO/DAO.csproj
+++ b/Nhom09_083_388_392_537_708/DAO/DAO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BangCapDAO.cs" />
     <Compile Include="DoanhNghiepDAO.cs" />
     <Compile Include="HoSoUngTuyenDAO.cs" />
     <Compile Include="PhieuDangTuyenDAO.cs" />
