change Utility to DTO

--- a/Nhom09_083_388_392_537_708/BUS/BUS.csproj
+++ b/Nhom09_083_388_392_537_708/BUS/BUS.csproj
@@ -53,9 +53,9 @@
       <Project>{ff52a78b-188f-4740-bb69-7ce190dec779}</Project>
       <Name>DAO</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Utility\Utility.csproj">
+    <ProjectReference Include="..\DTO\DTO.csproj">
       <Project>{00446729-fc5c-4cbd-bd53-9db072c8c56d}</Project>
-      <Name>Utility</Name>
+      <Name>DTO</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
