--- a/Nhom09_083_388_392_537_708/DTO/DTO.csproj
+++ b/Nhom09_083_388_392_537_708/DTO/DTO.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{00446729-FC5C-4CBD-BD53-9DB072C8C56D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Utility</RootNamespace>
-    <AssemblyName>Utility</AssemblyName>
+    <RootNamespace>DTO</RootNamespace>
+    <AssemblyName>DTO</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
