--- a/Nhom09_083_388_392_537_708/BUS/BUS.csproj
+++ b/Nhom09_083_388_392_537_708/BUS/BUS.csproj
@@ -42,11 +42,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DoanhNghiepBUS.cs" />
+    <Compile Include="HoaDonBUS.cs" />
     <Compile Include="HoSoUngTuyenBUS.cs" />
     <Compile Include="PhieuDangTuyenBUS.cs" />
+    <Compile Include="PhieuQuangCaoBUS.cs" />
     <Compile Include="UngVienBUS.cs" />
     <Compile Include="UserBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YeuCauCVBUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAO\DAO.csproj">
