--- a/Nhom09_083_388_392_537_708/DAO/DAO.csproj
+++ b/Nhom09_083_388_392_537_708/DAO/DAO.csproj
@@ -42,11 +42,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DoanhNghiepDAO.cs" />
+    <Compile Include="HoaDonDAO.cs" />
     <Compile Include="HoSoUngTuyenDAO.cs" />
     <Compile Include="PhieuDangTuyenDAO.cs" />
+    <Compile Include="PhieuQuangCaoDAO.cs" />
     <Compile Include="UngVienDAO.cs" />
     <Compile Include="UserDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YeuCauCVDAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Utility\Utility.csproj">
