Dang tuyen dung 3 layer, sua script THANHTOAN

--- a/Nhom09_083_388_392_537_708/BUS/BUS.csproj
+++ b/Nhom09_083_388_392_537_708/BUS/BUS.csproj
@@ -47,6 +47,7 @@
     <Compile Include="HoSoUngTuyenBUS.cs" />
     <Compile Include="PhieuDangTuyenBUS.cs" />
     <Compile Include="PhieuQuangCaoBUS.cs" />
+    <Compile Include="ThanhToanBUS.cs" />
     <Compile Include="UngVienBUS.cs" />
     <Compile Include="UserBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
