--- a/Nhom09_083_388_392_537_708/DTO/DTO.csproj
+++ b/Nhom09_083_388_392_537_708/DTO/DTO.csproj
@@ -44,6 +44,8 @@
     <Compile Include="DatabaseProvider.cs" />
     <Compile Include="DoanhNghiep.cs" />
     <Compile Include="LoggedUser.cs" />
+    <Compile Include="PhieuDangTuyenDTO.cs" />
+    <Compile Include="PhieuQuangCaoDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
