update logic for XULYHOSOUNGTUYEN

--- a/Nhom09_083_388_392_537_708/DTO/DTO.csproj
+++ b/Nhom09_083_388_392_537_708/DTO/DTO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BangCapDTO.cs" />
     <Compile Include="DatabaseProvider.cs" />
     <Compile Include="DoanhNghiep.cs" />
     <Compile Include="LoggedUser.cs" />
